# FCL

./: .gitignore  .travis.yml  CMakeLists.txt  bench_csv_to_plot_csvs.py  conanfile.txt  readme.md
FCLcli/: CMakeLists.txt  main.cpp
FCLws/: CMakeLists.txt  main.cpp
FCLws/html/: index.html  scripts.js  styles.css
docs/: api.md
libFCL/: CMakeLists.txt  FCL.hpp
libFCL/Evaluator/: Evaluator.cpp  Evaluator.hpp
libFCL/Functions/: IFunction.hpp  ValueFunction.hpp
libFCL/Nodes/: LoadNodes.cpp  LoadNodes.hpp  Node.hpp
libFCL/Parser/: Parser.cpp  Parser.hpp
libFCL/Serialization/: ISerializer.hpp  Serializer.hpp
libFCL/Writer/: Writer.hpp
src/: AST.cpp  AST.hpp  CMakeLists.txt  Constants.hpp  FCL.hpp  FunctionHelpers.hpp  Helpers.hpp  IFunction.hpp  Lexer.hpp  Logger.hpp  Node.hpp  NodeLink.cpp  NodeLink.hpp  fcl.cpp  fcl.hpp  main.cpp
src/AST/: AST.cpp  AST.hpp  LoadProgram.hpp  Node.hpp
src/Common/: Logger.hpp
src/Evaluator/: Evaluator.hpp
src/Functions/: FunctionHelpers.cpp  FunctionHelpers.hpp  FunctionHelpersImpl.hpp  IFunction.hpp  ValueFunction.hpp
src/Nodes/: LoadNodes.cpp  LoadNodes.hpp  Node.hpp
src/Parser/: Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  Token.hpp
src/Serialization/: ISerializer.hpp  Serializer.hpp
src/Utils/: LambdaVisitor.hpp
src/Writer/: Writer.cpp  Writer.hpp
test/: ASTTests.cpp  CMakeLists.txt  EvaluatorTests.cpp  ExecuteProgramTests.cpp  FunctionHelpersTests.cpp  LexerTests.cpp  LoadProgramTests.cpp  NodeTest.cpp  ParserTests.cpp  RandomTests.cpp  main.cpp
test/benchmark/: CMakeLists.txt  EvaluationBench.cpp  ExecutionFromFileBench.cpp  LoadingBench.cpp  ParsingBench.cpp
test/fakes/functions/: AddFunction.hpp  ConcatFunction.hpp  DivideFunction.hpp  Functions.hpp  IntToStringFunction.hpp  LowercaseFunction.hpp  MultiplyFunction.hpp  NWDandNWWFunction.hpp  SubtractFunction.hpp  UppercaseFunction.hpp
test/fakes/serializers/: IntSerializer.hpp  Serializers.hpp  StringSerializer.hpp
test/mocks/: IFunctionFake.hpp  IFunctionMock.hpp
test/ut/: CMakeLists.txt  EvaluatorTests.cpp  ExecuteProgramTests.cpp  FunctionHelpersTests.cpp  LexerTests.cpp  LoadProgramTests.cpp  ParserTests.cpp  WriterTests.cpp  main.cpp
